# test_5_25

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: 1  ci.yml
config/: celery.py  settings.py  urls.py
deploy/: Dockerfile  docker-compose.yml
lms/: models.py  paginators.py  serilazers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_initial.py
redis_data/: dump.rdb
users/: admin.py  models.py  permissions.py  serilazers.py  services.py  urls.py  views.py
users/management/commands/: app.py
users/migrations/: 0001_initial.py
